added get all conversations
